--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>git demo</title>
 </head>
 <body>
-    <h1>mbolo mbili ni nash
+    <h1>welcome to git practice</h1>
+    <p>this is third html file.</p>
 </body>
 </html>
 
