--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <title>git demo</title>
+    <title>my first pge</title>
 </head>
 <body>
     <h1>welcome to git practice</h1>
